<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login"
    android:background="@drawable/fb"
   >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
       >


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/icfon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp"
            app:layout_constraintVertical_bias="1.0"></ImageView>


        <EditText
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:id="@+id/email_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.107" />

        <EditText
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginTop="3dp"
            android:paddingTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_user"
            app:layout_constraintVertical_bias="0.053" />

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="150dp"
            android:layout_height="50dp"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:text="@string/ingresar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.176"
            android:enabled="false"></Button>

        <Button
            android:id="@+id/Create_user"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newuser"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="16dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_ingresar"
            app:layout_constraintVertical_bias="0.121"></Button>

        <Button
            android:id="@+id/reset_pass"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olvidepassword"
            android:textAllCaps="false"
            android:layout_marginTop="0dp"
            android:paddingTop="0dp"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="16dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/prog_bar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Create_user"
            app:layout_constraintVertical_bias="0.137"></Button>

        <ProgressBar
            android:id="@+id/prog_bar2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_pass"
            app:layout_constraintVertical_bias="0.456"></ProgressBar>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>