<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondo2"
    tools:context=".HomeFragment">

    <LinearLayout
        android:gravity="center"
        android:id="@+id/mainGrid"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!-- Column 2 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_map"
            style="@style/Base.CardView"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:background="@android:color/white"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="106dp"
                    android:layout_gravity="center"
                    android:src="@drawable/lavador" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/buscarcwman"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
        android:id="@+id/btn_map2"
            android:background="@android:color/white"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:layout_gravity="center_vertical"
            app:cardCornerRadius="8dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="106dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/slavar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buscarautos"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    </LinearLayout>



    <LinearLayout
        android:visibility="gone"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:labelFor="@+id/spinner"
            android:id="@+id/postRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@android:color/white"
        android:id="@+id/auth">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/a1"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"></TextView>

        <TextView
            android:paddingTop="70dp"
            android:layout_below="@id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/a2"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"></TextView>

        <Button
            android:layout_below="@+id/tv"
            android:id="@+id/verify"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/a3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></Button>
    </RelativeLayout>

</FrameLayout>